syntax = "proto3";

package storage.v1;

import "storage/v1/types.proto";

option go_package = "github.com/OpenAudio/go-openaudio/pkg/api/storage/v1";

service StorageService {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse) {}
  rpc UploadFiles(UploadFilesRequest) returns (UploadFilesResponse) {}
  rpc GetUpload(GetUploadRequest) returns (GetUploadResponse) {}
  rpc StreamTrack(StreamTrackRequest) returns (stream StreamTrackResponse) {}
  rpc GetStreamURL(GetStreamURLRequest) returns (GetStreamURLResponse) {}
  rpc GetIPData(GetIPDataRequest) returns (GetIPDataResponse) {}
  rpc GetRendezvousNodes(GetRendezvousNodesRequest) returns (GetRendezvousNodesResponse) {}
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
}
